--- a/ResearchQuestions/researchQuestions.tex
+++ b/ResearchQuestions/researchQuestions.tex
@@ -14,4 +14,8 @@ The following section talks about research questions:
     \item Due to lesser depencies in Unikernels does that mean lesser TAG policies are required for the appication ? 
     \item Can Unikernel provide sufficient performance in such a way that a dedicated processor is not required for processing TAGS ?   
     \item Does Unikernels with TAGS provide a secure and elastic environment ? 
+
+    % New ones 
+    \item Using TAG standard memory with interleaving for speeding up types for dynamic languages and execution of parallelization on Mult-kernels with each core 
+          running a Uni-kernel.
 \end{itemize}
